--- a/public/modules/about/views/index.html
+++ b/public/modules/about/views/index.html
@@ -1,4 +1,4 @@
 <div class="starter-template">
         <h1>IBM Connections Cloud App</h1>
-        <p class="lead">Usa esta aplicación como ejemplo de tu integración de aplicaciones colaborativas bajo la plataforma de IBM Connections Cloud.</p>
+        <p class="lead">Use this example application as an starting point for your Social application using IBM Bluemix and Connections Cloud.</p>
       </div>
